outline-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: outline
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: outline
