postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: outline
spec:
  selector:
    app: outline
  ports:
  - port: 5432
    targetPort: 5432
