outline-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: outline-vs
  namespace: istio-system
spec:
  gateways:
  - gateway
  hosts:
  - outline.geminisolutions.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: outline.outline.svc.cluster.local
